--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="container">
-	<div class="header">header</div>
+	<div class="header">Header</div>
 	<div class="box1">box1</div>
 	<div class="box2">box2</div>
 	<div class="box3">box3</div>
