--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="box2">box2</div>
 	<div class="box3">box3</div>
 	<div class="content2">content</div>
-	<div class="sidebar">sidebar</div>
+	<div class="sidebar"></div>
 
 
 
