--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+	<!--Ctrl-0 for reseting screen if somethings not working-->  
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
